# Strmline

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyrightconfig.json
api/: alembic.ini  pyproject.toml  pyrightconfig.json
api/alembic/: env.py
api/alembic/versions/: 20260703_0001_initial_schema.py  20260705_0002_tmdb_cache.py  20260705_0003_anilist_cache.py  20260705_0004_stream_selections.py  20260706_0005_library_exclusions.py  20260706_0006_sync_run_source.py  20260707_0007_dismiss_sync_errors.py  20260707_0008_classification_overrides.py  20260708_0009_media_item_tmdb_id_unique.py  20260708_0010_users_table.py  20260714_0011_error_logs.py  20260715_0012_permanent_virtual_library.py  20260716_0013_watchlist.py  20260716_0014_stream_selection_identity.py  20260716_0015_watchlist_all_media.py  20260716_0016_watchlist_library_exclusivity.py  20260716_0017_file_error_logs.py  20260717_0018_manual_tmdb_identity.py  20260718_0019_normalized_media_identity.py  20260718_0020_library_page_indexes.py  20260718_0021_add_library_entry_health.py  20260721_0022_torbox_runtime_settings.py
api/app/: __init__.py  admin_cli.py  cli.py  main.py  static_ui.py
api/app/api/: aiostreams.py  auth.py  dependencies.py  health.py  library.py  library_classification.py  library_identity.py  logs.py  operations.py  provider_config.py  resolver.py  search.py  (+5 more)
api/tests/: conftest.py  test_admin_cli.py  test_aiostreams_client.py  test_aiostreams_routes.py  test_anilist_cache.py  test_app_routes.py  test_auth_routes.py  test_auth_security.py  test_auto_sync_scheduler.py  test_bluray_sync.py  test_cli.py  test_db_models.py  test_db_session.py  test_docs.py  test_error_logging.py  test_identity_inputs.py  test_library_api.py  test_library_health.py  test_library_naming.py  test_library_paths.py  test_library_posters.py  test_library_removal.py  test_library_summary.py  test_library_sync_snapshot.py  test_library_validation.py  test_logging.py  test_media_identity.py  test_media_identity_domain.py  test_media_identity_repository.py  test_media_metadata_repository.py  test_metadata_refresh.py  test_postgres_identity_integration.py  test_resolver_failure_guard.py  test_resolver_manifest.py  test_resolver_repository.py  test_resolver_route.py  test_resolver_target_cache.py  test_search_action_confirmation.py  test_search_action_routes.py  test_search_auto_sync.py  (+34 more)
(+165 files in other folders)
