[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strmline-api"
version = "0.1.0"
description = "FastAPI backend for Strmline."
readme = "../docs/requirements.md"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "apscheduler",
  "asyncpg",
  "fastapi",
  "httpx",
  "pydantic-settings",
  "sqlalchemy[asyncio]",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pyright",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
asyncio_mode = "auto"
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = [
  ".venv",
  "alembic/versions",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "ANN101",
  "ANN102",
  "COM812",
  "E501",
  "ISC001",
  "TRY003",
]
fixable = ["ALL"]
unfixable = [
  "ERA",
  "F401",
  "F841",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Header",
  "fastapi.Cookie",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 40

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN201",
  "PLR2004",
  "S101",
]
"alembic/**/*.py" = [
  "ANN",
  "INP001",
]
